refactor(tsconfig): had to set noEmit to false because composite is true

--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -4,5 +4,8 @@
   "exclude": ["../../packages/app-template-admin-full"],
   "references": [
     { "path": "../../packages/app-template-admin-full/tsconfig.build.json" }
-  ]
+  ],
+  "compilerOptions": {
+    "noEmit": false
+  }
 }
