--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,28 +17,28 @@
     "@babel/runtime": "^7.5.5",
     "@emotion/core": "^10.0.17",
     "@emotion/styled": "^10.0.17",
-    "@rmwc/base": "^5.6.0",
-    "@rmwc/button": "^5.6.0",
-    "@rmwc/checkbox": "^5.6.0",
-    "@rmwc/chip": "^5.6.0",
-    "@rmwc/dialog": "^5.6.0",
-    "@rmwc/drawer": "^5.6.0",
-    "@rmwc/elevation": "^5.6.0",
-    "@rmwc/fab": "^5.6.0",
-    "@rmwc/grid": "^5.6.0",
-    "@rmwc/icon-button": "^5.6.0",
-    "@rmwc/list": "^5.6.0",
-    "@rmwc/menu": "^5.6.0",
-    "@rmwc/radio": "^5.6.0",
-    "@rmwc/ripple": "^5.6.0",
-    "@rmwc/select": "^5.6.0",
-    "@rmwc/slider": "^5.6.0",
-    "@rmwc/snackbar": "^5.6.0",
-    "@rmwc/switch": "^5.6.0",
-    "@rmwc/tabs": "^5.6.0",
-    "@rmwc/textfield": "^5.6.0",
-    "@rmwc/top-app-bar": "^5.6.0",
-    "@rmwc/typography": "^5.6.0",
+    "@rmwc/base": "^6.1.4",
+    "@rmwc/button": "^6.1.4",
+    "@rmwc/checkbox": "^6.1.4",
+    "@rmwc/chip": "^6.1.4",
+    "@rmwc/dialog": "^6.1.4",
+    "@rmwc/drawer": "^6.1.4",
+    "@rmwc/elevation": "^6.1.4",
+    "@rmwc/fab": "^6.1.4",
+    "@rmwc/grid": "^6.1.4",
+    "@rmwc/icon-button": "^6.1.4",
+    "@rmwc/list": "^6.1.4",
+    "@rmwc/menu": "^6.1.4",
+    "@rmwc/radio": "^6.1.4",
+    "@rmwc/ripple": "^6.1.4",
+    "@rmwc/select": "^6.1.4",
+    "@rmwc/slider": "^6.1.4",
+    "@rmwc/snackbar": "^6.1.4",
+    "@rmwc/switch": "^6.1.4",
+    "@rmwc/tabs": "^6.1.4",
+    "@rmwc/textfield": "^6.1.4",
+    "@rmwc/top-app-bar": "^6.1.4",
+    "@rmwc/typography": "^6.1.4",
     "@svgr/webpack": "^4.3.2",
     "brace": "^0.11.1",
     "classnames": "^2.2.6",
@@ -49,7 +49,7 @@
     "keycode": "^2.2.0",
     "load-script": "^1.0.0",
     "lodash": "^4.17.11",
-    "material-components-web": "^3.1.1",
+    "material-components-web": "^5.1.0",
     "nprogress": "^0.2.0",
     "nuka-carousel": "^4.3.9",
     "rc-tooltip": "^3.7.2",
@@ -80,12 +80,12 @@
     "babel-plugin-emotion": "^9.2.8",
     "babel-plugin-named-asset-import": "^1.0.0-next.3e165448",
     "jest-dom": "^3.0.0",
-    "node-sass": "^4.9.3",
+    "sass": "^1.26.11",
     "raw-loader": "^0.5.1",
     "react-docgen": "^5.0.0",
     "react-docgen-typescript-loader": "^3.6.0",
     "react-testing-library": "^5.2.0",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^10.0.2"
   },
   "peerDependencies": {
     "react": "^16.8.6",
@@ -117,9 +117,7 @@
     "ignore": {
       "dependencies": [
         "@svgr/webpack",
-        "material-components-web",
-        "@emotion/core",
-        "@rmwc/base"
+        "@emotion/core"
       ]
     }
   },
