build(project-utils): use sass instead of node-sass

--- a/packages/project-utils/package.json
+++ b/packages/project-utils/package.json
@@ -54,7 +54,6 @@
     "html-webpack-plugin": "4.0.0-beta.5",
     "lodash.get": "^4.4.2",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
     "null-loader": "^4.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
@@ -75,7 +74,8 @@
     "resolve": "1.12.2",
     "resolve-url-loader": "3.1.1",
     "rimraf": "^3.0.2",
-    "sass-loader": "8.0.0",
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2",
     "scheduler": "^0.19.1",
     "source-map-support": "^0.5.19",
     "style-loader": "1.0.0",
