--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -117,6 +117,8 @@
     "ignore": {
       "dependencies": [
         "@svgr/webpack",
+        "@rmwc/base",
+        "material-components-web",
         "@emotion/core"
       ]
     }
