--- a/packages/pulumi-sdk/package.json
+++ b/packages/pulumi-sdk/package.json
@@ -26,7 +26,11 @@
     "@pulumi/aws": "^2.0.0",
     "@pulumi/awsx": "^0.20.0",
     "execa": "^4.0.3",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "tar": "^6.0.5",
+    "download": "^5.0.3",
+    "ora": "^4.0.4",
+    "chalk": "^4.1.0"
   },
   "adio": {
     "ignore": {
@@ -40,7 +44,8 @@
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
     "watch": "babel src -d dist --source-maps --copy-files --extensions \".ts\" --watch",
-    "postbuild": "cp package.json LICENSE README.md dist/ && tsc -p tsconfig.build.json"
+    "postbuild": "cp package.json LICENSE README.md dist/ && tsc -p tsconfig.build.json",
+    "postinstall": "node "
   },
   "gitHead": "71cab7d5607b2e32a63034e324a663770507b32b"
 }
