fix: remove `graphql-request` package

--- a/packages/api-page-builder/package.json
+++ b/packages/api-page-builder/package.json
@@ -21,6 +21,8 @@
     "@webiny/commodo-graphql": "^4.12.1",
     "@webiny/graphql": "^4.12.1",
     "@webiny/handler-ssr": "^4.12.1",
+    "@webiny/handler": "^4.12.1",
+    "@webiny/handler-http": "^4.12.1",
     "@webiny/validation": "^4.12.1",
     "download": "^5.0.3",
     "extract-zip": "^1.6.7",
@@ -28,7 +30,6 @@
     "fs-extra": "^7.0.0",
     "got": "^9.6.0",
     "graphql": "^14.4.2",
-    "graphql-request": "^1.8.2",
     "graphql-tag": "^2.10.1",
     "load-json-file": "^6.2.0",
     "lodash": "^4.17.11",
