--- a/packages/pulumi-sdk/package.json
+++ b/packages/pulumi-sdk/package.json
@@ -8,11 +8,7 @@
     "url": "https://github.com/webiny/webiny-js.git"
   },
   "description": "A Node.js Pulumi SDK.",
-  "contributors": [
-    "Pavel Denisjuk <pavel@webiny.com>",
-    "Sven Al Hamad <sven@webiny.com>",
-    "Adrian Smijulj <adrian@webiny.com>"
-  ],
+  "author": "Webiny",
   "license": "MIT",
   "publishConfig": {
     "access": "public",
@@ -28,9 +24,7 @@
     "execa": "^4.0.3",
     "lodash": "^4.17.4",
     "tar": "^6.0.5",
-    "download": "^5.0.3",
-    "ora": "^4.0.4",
-    "chalk": "^4.1.0"
+    "download": "^5.0.3"
   },
   "adio": {
     "ignore": {
@@ -45,7 +39,7 @@
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
     "watch": "babel src -d dist --source-maps --copy-files --extensions \".ts\" --watch",
     "postbuild": "cp package.json LICENSE README.md dist/ && tsc -p tsconfig.build.json",
-    "postinstall": "node "
+    "postinstall": "echo \"WOAAAAAAAWOAAAAAAAWOAAAAAAAWOAAAAAAAWOAAAAAAAWOAAAAAAAWOAAAAAAAWOAAAAAAAWOAAAAAAAWOAAAAAAAWOAAAAAAAWOAAAAAAAWOAAAAAAAWOAAAAAAAWOAAAAAAAWOAAAAAAAWOAAAAAAAWOAAAAAAA\" "
   },
   "gitHead": "71cab7d5607b2e32a63034e324a663770507b32b"
 }
