--- a/packages/app-plugin-security-cognito-theme/package.json
+++ b/packages/app-plugin-security-cognito-theme/package.json
@@ -10,6 +10,7 @@
     "@webiny/app-plugin-security-cognito": "^4.12.1",
     "@webiny/app-security": "^4.12.1",
     "@webiny/form": "^4.12.1",
+    "@webiny/plugins": "^4.12.1",
     "@webiny/ui": "^4.12.1",
     "@webiny/validation": "^4.12.1",
     "classnames": "^2.2.6",
