--- a/packages/pulumi-sdk/package.json
+++ b/packages/pulumi-sdk/package.json
@@ -22,6 +22,7 @@
     "@pulumi/aws": "2.13.1",
     "@pulumi/awsx": "0.22.0",
     "execa": "^4.0.3",
+    "extract-zip": "^1.6.7",
     "lodash": "^4.17.4",
     "tar": "^6.0.5",
     "download": "^5.0.3"
