build(app-plugin-security-cognito-theme): add plugins to ts references

--- a/packages/app-plugin-security-cognito-theme/tsconfig.build.json
+++ b/packages/app-plugin-security-cognito-theme/tsconfig.build.json
@@ -22,6 +22,7 @@
     { "path": "../app-plugin-security-cognito/tsconfig.build.json" },
     { "path": "../form/tsconfig.build.json" },
     { "path": "../ui/tsconfig.build.json" },
-    { "path": "../validation/tsconfig.build.json" }
+    { "path": "../validation/tsconfig.build.json" },
+    { "path": "../plugins/tsconfig.build.json" }
   ]
 }
