--- a/packages/app-plugin-security-cognito-theme/tsconfig.json
+++ b/packages/app-plugin-security-cognito-theme/tsconfig.json
@@ -6,6 +6,7 @@
     { "path": "../app-plugin-security-cognito" },
     { "path": "../form" },
     { "path": "../ui" },
-    { "path": "../validation" }
+    { "path": "../validation" },
+    { "path": "../plugins" }
   ]
 }
