build(app-plugin-security-cognito-theme): add plugins to tsbuild exclude

--- a/packages/app-plugin-security-cognito-theme/tsconfig.build.json
+++ b/packages/app-plugin-security-cognito-theme/tsconfig.build.json
@@ -9,7 +9,8 @@
     "../app-plugin-security-cognito",
     "../form",
     "../ui",
-    "../validation"
+    "../validation",
+    "../plugins"
   ],
   "compilerOptions": {
     "rootDir": "./src",
