feat: add support for login logo customization (#1272)

--- a/packages/app-plugin-security-cognito-theme/tsconfig.build.json
+++ b/packages/app-plugin-security-cognito-theme/tsconfig.build.json
@@ -9,7 +9,8 @@
     "../app-plugin-security-cognito",
     "../form",
     "../ui",
-    "../validation"
+    "../validation",
+    "../plugins"
   ],
   "compilerOptions": {
     "rootDir": "./src",
@@ -22,6 +23,7 @@
     { "path": "../app-plugin-security-cognito/tsconfig.build.json" },
     { "path": "../form/tsconfig.build.json" },
     { "path": "../ui/tsconfig.build.json" },
-    { "path": "../validation/tsconfig.build.json" }
+    { "path": "../validation/tsconfig.build.json" },
+    { "path": "../plugins/tsconfig.build.json" }
   ]
 }
