--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -11,4 +11,4 @@ jobs:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         issue-message: 'Hello @${{ github.actor }} !  Welcome to Webiny! 💖, <br> Thank you and congrats 🎉 for opening your very first issue in this project. Hope you have a great time there! 🙂'
         pr-message: 'Hello @${{ github.actor }} ! Welcome to Webiny! 💖, <br> Thank you and congrats 🎉 for opening your pull request . We will get back to you as soon as we can.🙂 '
-        push-message: 'Congrats on merging your pull request!🎉
+        push-message: 'Congrats on merging your pull request!🎉'
