--- a/api/apolloGateway/package.json
+++ b/api/apolloGateway/package.json
@@ -5,8 +5,8 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^4.11.0-beta.1",
-    "@webiny/handler-apollo-gateway": "^4.11.0-beta.1",
-    "@webiny/project-utils": "^4.11.0-beta.1"
+    "@webiny/handler": "^4.12.1",
+    "@webiny/handler-apollo-gateway": "^4.12.1",
+    "@webiny/project-utils": "^4.12.1"
   }
 }
