--- a/api/files/manage/package.json
+++ b/api/files/manage/package.json
@@ -5,7 +5,7 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^4.11.0-beta.1",
-    "@webiny/serverless-files": "^4.11.0-beta.1"
+    "@webiny/handler": "^4.12.1",
+    "@webiny/serverless-files": "^4.12.1"
   }
 }
