--- a/api/formBuilder/package.json
+++ b/api/formBuilder/package.json
@@ -5,15 +5,15 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^4.11.0-beta.1",
-    "@webiny/handler-apollo-server": "^4.11.0-beta.1",
-    "@webiny/api-plugin-commodo-db-proxy": "^4.11.0-beta.1",
-    "@webiny/api-plugin-security-cognito": "^4.11.0-beta.1",
-    "@webiny/api-security": "^4.11.0-beta.1",
-    "@webiny/api-security-permissions-manager": "^4.11.0-beta.1",
-    "@webiny/api-settings-manager": "^4.11.0-beta.1",
-    "@webiny/api-i18n": "^4.11.0-beta.1",
-    "@webiny/api-form-builder": "^4.11.0-beta.1",
-    "@webiny/project-utils": "^4.11.0-beta.1"
+    "@webiny/handler": "^4.12.1",
+    "@webiny/handler-apollo-server": "^4.12.1",
+    "@webiny/api-plugin-commodo-db-proxy": "^4.12.1",
+    "@webiny/api-plugin-security-cognito": "^4.12.1",
+    "@webiny/api-security": "^4.12.1",
+    "@webiny/api-security-permissions-manager": "^4.12.1",
+    "@webiny/api-settings-manager": "^4.12.1",
+    "@webiny/api-i18n": "^4.12.1",
+    "@webiny/api-form-builder": "^4.12.1",
+    "@webiny/project-utils": "^4.12.1"
   }
 }
