--- a/api/settingsManager/package.json
+++ b/api/settingsManager/package.json
@@ -5,9 +5,9 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^4.11.0-beta.1",
-    "@webiny/api-plugin-commodo-db-proxy": "^4.11.0-beta.1",
-    "@webiny/api-settings-manager": "^4.11.0-beta.1",
-    "@webiny/project-utils": "^4.11.0-beta.1"
+    "@webiny/handler": "^4.12.1",
+    "@webiny/api-plugin-commodo-db-proxy": "^4.12.1",
+    "@webiny/api-settings-manager": "^4.12.1",
+    "@webiny/project-utils": "^4.12.1"
   }
 }
