--- a/apps/cmsOnly/package.json
+++ b/apps/cmsOnly/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@webiny/app-template-admin": "^4.11.0-beta.1",
-    "@webiny/app-headless-cms": "^4.11.0-beta.1",
+    "@webiny/app-template-admin": "^4.12.1",
+    "@webiny/app-headless-cms": "^4.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
-    "@webiny/cli": "^4.11.0-beta.1",
-    "@webiny/project-utils": "^4.11.0-beta.1"
+    "@webiny/cli": "^4.12.1",
+    "@webiny/project-utils": "^4.12.1"
   },
   "scripts": {
     "start": "env-cmd -r .env.json --silent -e default,local webiny run start",
