--- a/apps/databaseProxy/package.json
+++ b/apps/databaseProxy/package.json
@@ -5,7 +5,7 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^4.11.0-beta.1",
-    "@webiny/api-plugin-commodo-db-proxy": "^4.11.0-beta.1"
+    "@webiny/handler": "^4.12.1",
+    "@webiny/api-plugin-commodo-db-proxy": "^4.12.1"
   }
 }
