--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,6 +9,6 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Hello @${{ github.actor }} !  Welcome to Webiny! 💖, <br> Thank you and congrats 🎉 for opening your very first issue in this project. Hope you have a great time there! 🙂'
-        pr-message: 'Hello @${{ github.actor }} ! Welcome to Webiny! 💖, <br> Thank you and congrats 🎉 for opening your pull request . We will get back to you as soon as we can.🙂 '
-        push-message: 'Congrats on merging your pull request!🎉'
+        issue-message: 'Hello @${{ github.actor }} and welcome to Webiny! 💖 <br>Thank you and congrats 🎉 for opening your very first issue in this project. Hope you have a great time there! 🙂'
+        pr-message: 'Hello @${{ github.actor }} and welcome to Webiny! 💖 <br>Thank you and congrats 🎉 for opening your pull request. We will get back to you as soon as we get a chance. 🙂 '
+        push-message: 'Congrats on merging your pull request! 🎉'
