--- a/package.json
+++ b/package.json
@@ -155,10 +155,10 @@
     }
   },
   "lint-staged": {
-    "**/*.js": [
+    "**/*.{js,ts,tsx}": [
       "adio",
       "yarn prettier:fix",
-      "eslint",
+      "yarn eslint:fix",
       "git add"
     ]
   },
