--- a/packages/api-i18n/package.json
+++ b/packages/api-i18n/package.json
@@ -26,14 +26,20 @@
     "accept-language-parser": "^1.5.0",
     "graphql-tag": "^2.10.1",
     "i18n-locales": "^0.0.2",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "@commodo/fields": "beta",
+    "@commodo/fields-storage": "beta",
+    "@commodo/fields-storage-dynamodb": "beta",
+    "@commodo/hooks": "beta",
+    "@commodo/name": "beta"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.8.3",
-    "@webiny/api-plugin-commodo-db-proxy": "^4.12.1"
+    "@webiny/api-plugin-commodo-db-proxy": "^4.12.1",
+    "@shelf/jest-dynamodb": "^1.7.0"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.3"
