--- a/packages/api-plugin-commodo-nedb/package.json
+++ b/packages/api-plugin-commodo-nedb/package.json
@@ -15,7 +15,7 @@
 	],
 	"dependencies": {
 		"@babel/runtime": "^7.5.5",
-		"@commodo/fields-storage-nedb": "^2.0.0"
+		"@commodo/fields-storage-nedb": "beta"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.5.5",
