--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -29,8 +29,12 @@
       "@webiny/api-i18n": ["./packages/api-i18n/src"],
       "@webiny/api-plugin-commodo-db-proxy/*": ["./packages/api-plugin-commodo-db-proxy/src/*"],
       "@webiny/api-plugin-commodo-db-proxy": ["./packages/api-plugin-commodo-db-proxy/src"],
+      "@webiny/api-plugin-commodo-dynamodb/*": ["./packages/api-plugin-commodo-dynamodb/src/*"],
+      "@webiny/api-plugin-commodo-dynamodb": ["./packages/api-plugin-commodo-dynamodb/src"],
       "@webiny/api-plugin-commodo-mongodb/*": ["./packages/api-plugin-commodo-mongodb/src/*"],
       "@webiny/api-plugin-commodo-mongodb": ["./packages/api-plugin-commodo-mongodb/src"],
+      "@webiny/api-plugin-commodo-nedb/*": ["./packages/api-plugin-commodo-nedb/src/*"],
+      "@webiny/api-plugin-commodo-nedb": ["./packages/api-plugin-commodo-nedb/src"],
       "@webiny/api-settings-manager/*": ["./packages/api-settings-manager/src/*"],
       "@webiny/api-security/*": ["./packages/api-security/src/*"],
       "@webiny/api-security": ["./packages/api-security/src"],
