--- a/packages/app-plugin-security-cognito/package.json
+++ b/packages/app-plugin-security-cognito/package.json
@@ -18,16 +18,13 @@
     "emotion": "^10.0.27",
     "@webiny/app-security-user-management": "^4.11.0-beta.1",
     "@webiny/app-security": "^4.12.1",
-    "@webiny/validation": "^4.11.0-beta.1",
-    "@webiny/form": "^4.11.0-beta.1",
+    "@webiny/validation": "^4.12.1",
+    "@webiny/form": "^4.12.1",
     "@webiny/ui": "^4.12.1",
     "apollo-client": "^2.6.10",
     "apollo-link-context": "^1.0.20",
     "lodash": "^4.17.20",
-    "react-apollo": "^3.1.0",
-    "store": "^2.0.12",
-    "graphql-tag": "^2.10.1",
-    "invariant": "^2.2.4"
+    "react-apollo": "^3.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
