--- a/packages/app-security/package.json
+++ b/packages/app-security/package.json
@@ -23,9 +23,14 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.8.3",
+    "@emotion/styled": "^10.0.27",
+    "@webiny/ui": "^4.12.1",
+    "@webiny/react-router": "^4.12.1",
     "babel-plugin-emotion": "^9.2.8",
     "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-named-asset-import": "^1.0.0-next.3e165448"
+    "babel-plugin-named-asset-import": "^1.0.0-next.3e165448",
+    "emotion": "^10.0.17",
+    "react-helmet": "^5.2.0"
   },
   "peerDependencies": {
     "react": "^16.8.6",
