--- a/packages/app-security-user-management/package.json
+++ b/packages/app-security-user-management/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/app-security-user-management",
-  "version": "4.11.0-beta.1",
+  "version": "4.13.0",
   "main": "index.js",
   "repository": {
     "type": "git",
