--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "apps/site/code/app",
       "api/code/apolloGateway",
       "api/code/awsDocumentDbProxy",
+      "api/code/mongoAtlasProxy",
       "api/code/databaseProxy",
       "api/code/fileManager/*",
       "api/code/formBuilder",
