fix: commit issues #2

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
       "api/code/formBuilder",
       "api/code/graphqlPlayground",
       "api/code/i18n/*",
+      "api/code/mongoAtlasProxy",
       "api/code/settingsManager",
       "api/code/cms/*",
       "api/code/pageBuilder",
@@ -116,14 +117,16 @@
     "fsevents": "^2.0.7"
   },
   "scripts": {
-    "eslint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
+    "eslint": "eslint \"packages/app-page-builder/src/editor/**/*.{js,jsx,ts,tsx}\"",
     "eslint:fix": "yarn eslint --fix",
     "build": "lerna run build --stream",
     "build:apps": "lerna run build --scope=@webiny/app* --stream",
+    "build:apps:pb": "lerna run build --scope=@webiny/app-page-builder --stream",
     "build:app-templates": "lerna run build --scope=@webiny/app-template* --stream",
     "build:api": "lerna run build --scope=@webiny/api* --scope=@webiny/handler* --stream",
     "build:packages": "lerna run build --scope=@webiny/* --ignore=@webiny/serv* --stream",
     "watch:apps": "lerna run watch --scope=@webiny/app* --stream --parallel",
+    "watch:apps-pb": "lerna run watch --scope=@webiny/app-page-builder --stream --parallel",
     "watch:api": "lerna run watch --scope=@webiny/api* --stream --parallel",
     "watch:packages": "lerna run watch --scope=@webiny/* --ignore=@webiny/serv* --stream --parallel",
     "clear-dist": "yarn rimraf packages/*/dist",
@@ -138,7 +141,7 @@
     "lint-staged": "lint-staged",
     "postinstall": "node ./scripts/linkPackages.js",
     "prepublishOnly": "node scripts/prepublishOnly.js",
-    "prettier": "prettier \"**/**/*.{js,jsx,ts,tsx}\" --config .prettierrc.js",
+    "prettier": "prettier \"packages/app-page-builder/src/editor/**/*.{js,jsx,ts,tsx}\" --config .prettierrc.js",
     "prettier:check": "yarn prettier --check",
     "prettier:fix": "yarn prettier --write",
     "setup-repo": "node scripts/setupRepo",
