fix: update paths in tsconfig files and add pbInstallation.zip

--- a/api/code/fileManager/download/tsconfig.json
+++ b/api/code/fileManager/download/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../tsconfig",
+  "extends": "../../../../tsconfig",
   "references": [
     { "path": "../../../../packages/api-file-manager" },
     { "path": "../../../../packages/handler-aws" }
