--- a/api/code/apolloGateway/tsconfig.json
+++ b/api/code/apolloGateway/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "extends": "../../tsconfig",
+  "extends": "../../../tsconfig",
   "references": [
-    { "path": "../../packages/handler" },
-    { "path": "../../packages/handler-apollo-gateway" }
+    { "path": "../../../packages/handler" },
+    { "path": "../../../packages/handler-apollo-gateway" }
   ]
 }
