wip: eject apps

--- a/apps/admin/code/tsconfig.json
+++ b/apps/admin/code/tsconfig.json
@@ -1,7 +1,6 @@
 {
-  "extends": "../../../../tsconfig",
+  "extends": "../../../tsconfig",
   "include": ["src"],
-  "exclude": ["../../../../packages/app-template-admin-full"],
   "compilerOptions": {
     "composite": false
   }
