--- a/apps/site/code/tsconfig.json
+++ b/apps/site/code/tsconfig.json
@@ -1,8 +1,7 @@
 {
-  "extends": "../../../../tsconfig",
+  "extends": "../../../tsconfig",
   "include": ["src"],
-  "exclude": ["../../../../packages/app-template-site"],
-  "references": [
-    { "path": "../../../../packages/app-template-site/tsconfig.build.json" }
-  ]
+  "compilerOptions": {
+    "composite": false
+  }
 }
