--- a/packages/pulumi-sdk/package.json
+++ b/packages/pulumi-sdk/package.json
@@ -22,7 +22,7 @@
     "@pulumi/aws": "3.5.0",
     "@pulumi/awsx": "0.22.0",
     "execa": "^4.0.3",
-    "extract-zip": "^1.6.7",
+    "decompress": "^4.2.1",
     "lodash": "^4.17.4",
     "tar": "^6.0.5",
     "download": "^5.0.3"
