--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -13,3 +13,4 @@ jobs:
           stale-issue-message: 'This issue is stale because it has been open 60 days with no activity. Remove stale label or comment or this will be closed in 7 days.'
           days-before-stale: 60
           days-before-close: 7
+          stale-issue-label: 'stale-issue'
