feat: connected atoms

--- a/package.json
+++ b/package.json
@@ -117,16 +117,19 @@
     "fsevents": "^2.0.7"
   },
   "scripts": {
-    "eslint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
+    "eslint": "eslint \"packages/app-page-builder/**/*.{js,jsx,ts,tsx}\"",
     "eslint:fix": "yarn eslint --fix",
     "build": "lerna run build --stream",
     "build:apps": "lerna run build --scope=@webiny/app* --stream",
+    "build:apps:pb": "lerna run build --scope=@webiny/app-page-builder --stream",
     "build:app-templates": "lerna run build --scope=@webiny/app-template* --stream",
     "build:api": "lerna run build --scope=@webiny/api* --scope=@webiny/handler* --stream",
     "build:packages": "lerna run build --scope=@webiny/* --ignore=@webiny/serv* --stream",
     "watch:apps": "lerna run watch --scope=@webiny/app* --stream --parallel",
+    "watch:apps:pb": "lerna run watch --scope=@webiny/app-page-builder --stream --parallel",
     "watch:api": "lerna run watch --scope=@webiny/api* --stream --parallel",
     "watch:packages": "lerna run watch --scope=@webiny/* --ignore=@webiny/serv* --stream --parallel",
+    "watch:packages:pulumi": "lerna run watch --scope=@webiny/pulumi-sdk --stream --parallel",
     "clear-dist": "yarn rimraf packages/*/dist",
     "contributors:add": "contreebutors add --username",
     "contributors:generate": "contreebutors render",
@@ -139,7 +142,7 @@
     "lint-staged": "lint-staged",
     "postinstall": "node ./scripts/linkPackages.js",
     "prepublishOnly": "node scripts/prepublishOnly.js",
-    "prettier": "prettier \"**/**/*.{js,jsx,ts,tsx}\" --config .prettierrc.js",
+    "prettier": "prettier \"packages/app-page-builder/**/*.{js,jsx,ts,tsx}\" --config .prettierrc.js",
     "prettier:check": "yarn prettier --check",
     "prettier:fix": "yarn prettier --write",
     "setup-repo": "node scripts/setupRepo",
