--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "fsevents": "^2.0.7"
   },
   "scripts": {
-    "eslint": "eslint \"packages/app-page-builder/**/*.{js,jsx,ts,tsx}\"",
+    "eslint": "eslint \"packages/**/*.{ts,tsx}\" --quiet",
     "eslint:fix": "yarn eslint --fix",
     "build": "lerna run build --stream",
     "build:apps": "lerna run build --scope=@webiny/app* --stream",
@@ -142,7 +142,7 @@
     "lint-staged": "lint-staged",
     "postinstall": "node ./scripts/linkPackages.js",
     "prepublishOnly": "node scripts/prepublishOnly.js",
-    "prettier": "prettier \"packages/app-page-builder/**/*.{js,jsx,ts,tsx}\" --config .prettierrc.js",
+    "prettier": "prettier \"packages/**/src/**/*.{js,ts,tsx}\" --config .prettierrc.js",
     "prettier:check": "yarn prettier --check",
     "prettier:fix": "yarn prettier --write",
     "setup-repo": "node scripts/setupRepo",
