--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
       "api/code/settingsManager",
       "api/code/cms/*",
       "api/code/pageBuilder",
-      "api/code/security/*"
+      "api/code/security/*",
+      "api/code/elasticDemo"
     ],
     "nohoist": [
       "**/inquirer/**",
