chore(app-i18n): add "app-security-user-management" as dependency

--- a/packages/app-i18n/tsconfig.build.json
+++ b/packages/app-i18n/tsconfig.build.json
@@ -8,6 +8,7 @@
     "../app",
     "../app-admin",
     "../app-security",
+    "../app-security-user-management",
     "../form",
     "../plugins",
     "../react-router",
@@ -23,6 +24,7 @@
     { "path": "../app/tsconfig.build.json" },
     { "path": "../app-admin/tsconfig.build.json" },
     { "path": "../app-security/tsconfig.build.json" },
+    { "path": "../app-security-user-management/tsconfig.build.json" },
     { "path": "../form/tsconfig.build.json" },
     { "path": "../plugins/tsconfig.build.json" },
     { "path": "../react-router/tsconfig.build.json" },
