--- a/packages/app-i18n/tsconfig.json
+++ b/packages/app-i18n/tsconfig.json
@@ -4,6 +4,7 @@
     { "path": "../app" },
     { "path": "../app-admin" },
     { "path": "../app-security" },
+    { "path": "../app-security-user-management" },
     { "path": "../form" },
     { "path": "../plugins" },
     { "path": "../react-router" },
