--- a/packages/app-i18n/package.json
+++ b/packages/app-i18n/package.json
@@ -18,6 +18,7 @@
     "@webiny/app": "^4.13.0",
     "@webiny/app-admin": "^4.13.0",
     "@webiny/app-security": "^4.13.0",
+    "@webiny/app-security-user-management": "^4.13.0",
     "@webiny/form": "^4.13.0",
     "@webiny/plugins": "^4.13.0",
     "@webiny/react-router": "^4.13.0",
