chore(app-page-builder): add "app-security-user-management"

--- a/packages/app-page-builder/tsconfig.json
+++ b/packages/app-page-builder/tsconfig.json
@@ -6,6 +6,7 @@
     { "path": "../app-plugin-admin-welcome-screen" },
     { "path": "../app-template" },
     { "path": "../app-security" },
+    { "path": "../app-security-user-management" },
     { "path": "../form" },
     { "path": "../plugins" },
     { "path": "../react-router" },
