--- a/packages/app-page-builder/package.json
+++ b/packages/app-page-builder/package.json
@@ -23,6 +23,7 @@
     "@webiny/app-admin": "^4.13.0",
     "@webiny/app-plugin-admin-welcome-screen": "^4.13.0",
     "@webiny/app-security": "^4.13.0",
+    "@webiny/app-security-user-management": "^4.13.0",
     "@webiny/app-template": "^4.13.0",
     "@webiny/form": "^4.13.0",
     "@webiny/plugins": "^4.13.0",
