--- a/packages/app-page-builder/tsconfig.build.json
+++ b/packages/app-page-builder/tsconfig.build.json
@@ -8,6 +8,7 @@
     "../app-plugin-admin-welcome-screen",
     "../app-template",
     "../app-security",
+    "../app-security-user-management",
     "../plugins",
     "../react-router",
     "../form",
@@ -24,6 +25,7 @@
     { "path": "../app-plugin-admin-welcome-screen/tsconfig.build.json" },
     { "path": "../app-template/tsconfig.build.json" },
     { "path": "../app-security/tsconfig.build.json" },
+    { "path": "../app-security-user-management/tsconfig.build.json" },
     { "path": "../plugins/tsconfig.build.json" },
     { "path": "../react-router/tsconfig.build.json" },
     { "path": "../form/tsconfig.build.json" },
