--- a/.github/workflows/pullRequests.yml
+++ b/.github/workflows/pullRequests.yml
@@ -1,7 +1,7 @@
 name: Pull Request Actions
 
 on:
-  pull_request:
+  pull_request_target:
     branches: [master]
 
 env:
@@ -12,8 +12,6 @@ env:
   WEBINY_TRACKING_PREFIX: ${{ secrets.WEBINY_TRACKING_PREFIX }}
 
 jobs:
-  # Unlike in the "Build (beta)" workflow, if some of these fail, we want the rest of the jobs
-  # to continue running so that we can also find out if there are any errors in the actual code.
   initial-checks:
     name: Initial checks
     runs-on: ubuntu-latest
