wip: add missing deps, improve app structure

--- a/packages/app-file-manager/package.json
+++ b/packages/app-file-manager/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
+    "@emotion/styled": "^10.0.27",
     "@webiny/app": "^4.13.0",
     "@webiny/app-admin": "^4.13.0",
     "@webiny/app-security": "^4.13.0",
