--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "fsevents": "^2.0.7"
   },
   "scripts": {
-    "eslint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
+    "eslint": "eslint \"**/*.{js,jsx,ts,tsx}\" --max-warnings=0",
     "eslint:fix": "yarn eslint --fix",
     "build": "lerna run build --stream",
     "build:apps": "lerna run build --scope=@webiny/app* --stream",
@@ -156,10 +156,9 @@
   },
   "lint-staged": {
     "**/*.{js,ts,tsx}": [
-      "adio",
-      "prettier --write",
-      "eslint",
-      "git add"
+      "prettier --check",
+      "eslint --max-warnings=0",
+      "adio"
     ]
   },
   "yargs": {
