--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "fsevents": "^2.0.7"
   },
   "scripts": {
-    "eslint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
+    "eslint": "eslint \"**/*.{js,jsx,ts,tsx}\" --max-warnings=0",
     "eslint:fix": "yarn eslint --fix",
     "build": "lerna run build --stream",
     "build:apps": "lerna run build --scope=@webiny/app* --stream",
@@ -156,11 +156,10 @@
     }
   },
   "lint-staged": {
-    "**/*.js": [
-      "adio",
-      "yarn prettier:fix",
-      "eslint",
-      "git add"
+    "**/*.{js,ts,tsx}": [
+      "prettier --check",
+      "eslint --max-warnings=0",
+      "adio"
     ]
   },
   "yargs": {
