--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -35,6 +35,8 @@
       "@webiny/api-plugin-commodo-mongodb": ["./packages/api-plugin-commodo-mongodb/src"],
       "@webiny/api-plugin-commodo-nedb/*": ["./packages/api-plugin-commodo-nedb/src/*"],
       "@webiny/api-plugin-commodo-nedb": ["./packages/api-plugin-commodo-nedb/src"],
+      "@webiny/api-plugin-db-dynamodb/*": ["./packages/api-plugin-db-dynamodb/src/*"],
+      "@webiny/api-plugin-db-dynamodb": ["./packages/api-plugin-db-dynamodb/src"],
       "@webiny/api-settings-manager/*": ["./packages/api-settings-manager/src/*"],
       "@webiny/api-security/*": ["./packages/api-security/src/*"],
       "@webiny/api-security": ["./packages/api-security/src"],
@@ -90,6 +92,10 @@
       "@webiny/commodo-graphql": ["./packages/commodo-graphql/src"],
       "@webiny/commodo-graphql/*": ["./packages/commodo-graphql/src/*"],
       "@webiny/commodo-fields-storage-db-proxy": ["./packages/commodo-fields-storage-db-proxy/src"],
+      "@webiny/db/*": ["./packages/data/src/*"],
+      "@webiny/db": ["./packages/data/src"],
+      "@webiny/db-dynamodb/*": ["./packages/data-dynamodb/src/*"],
+      "@webiny/db-dynamodb": ["./packages/data-dynamodb/src"],
       "@webiny/graphql/*": ["./packages/graphql/src/*"],
       "@webiny/graphql": ["./packages/graphql/src"],
       "@webiny/handler/*": ["./packages/handler/src/*"],
