--- a/packages/cli-plugin-deploy-pulumi/package.json
+++ b/packages/cli-plugin-deploy-pulumi/package.json
@@ -7,22 +7,17 @@
     "url": "https://github.com/webiny/webiny-js.git",
     "directory": "packages/cli-plugin-deploy-pulumi"
   },
-  "author": "Webiny Ltd.",
-  "contributors": [
-    "Pavel Denisjuk <pavel@webiny.com>"
-  ],
+  "author": "Webiny Ltd",
   "description": "A tool to bootstrap a Webiny project.",
   "dependencies": {
     "@webiny/pulumi-sdk": "^4.13.0",
     "chalk": "^4.0.0",
     "execa": "^4.0.0",
     "fs-extra": "^9.0.0",
-    "get-yarn-workspaces": "^1.0.2",
     "load-json-file": "^6.2.0",
     "lodash.get": "^4.4.2",
     "node-notifier": "^7.0.1",
     "write-json-file": "^4.3.0",
-    "progress": "^2.0.3",
     "ora": "^4.0.4"
   },
   "license": "MIT",
