--- a/packages/app-form-builder/package.json
+++ b/packages/app-form-builder/package.json
@@ -24,6 +24,7 @@
     "@webiny/app-page-builder": "^4.13.0",
     "@webiny/app-plugin-admin-welcome-screen": "^4.13.0",
     "@webiny/app-security": "^4.13.0",
+    "@webiny/app-security-user-management": "^4.13.0",
     "@webiny/form": "^4.13.0",
     "@webiny/plugins": "^4.13.0",
     "@webiny/react-router": "^4.13.0",
