--- a/packages/app-headless-cms/package.json
+++ b/packages/app-headless-cms/package.json
@@ -27,6 +27,7 @@
     "@webiny/app-i18n": "^4.13.0",
     "@webiny/app-plugin-admin-welcome-screen": "^4.13.0",
     "@webiny/app-security": "^4.13.0",
+    "@webiny/app-security-user-management": "^4.13.0",
     "@webiny/app-template": "^4.13.0",
     "@webiny/form": "^4.13.0",
     "@webiny/plugins": "^4.13.0",
