--- a/packages/cli-plugin-build/package.json
+++ b/packages/cli-plugin-build/package.json
@@ -11,19 +11,9 @@
   "contributors": [
     "Pavel Denisjuk <pavel@webiny.com>"
   ],
-  "description": "A tool to bootstrap a Webiny project.",
+  "description": "A CLI plugin for building packages.",
   "dependencies": {
-    "@webiny/pulumi-sdk": "^4.13.0",
-    "chalk": "^4.0.0",
-    "execa": "^4.0.0",
-    "fs-extra": "^9.0.0",
-    "get-yarn-workspaces": "^1.0.2",
-    "load-json-file": "^6.2.0",
-    "lodash.get": "^4.4.2",
-    "node-notifier": "^7.0.1",
-    "write-json-file": "^4.3.0",
-    "progress": "^2.0.3",
-    "ora": "^4.0.4"
+    "execa": "^4.0.0"
   },
   "license": "MIT",
   "publishConfig": {
