chore: update dependencies

--- a/packages/api-form-builder/tsconfig.build.json
+++ b/packages/api-form-builder/tsconfig.build.json
@@ -5,6 +5,7 @@
     "node_modules",
     "../graphql",
     "../api-i18n",
+    "../api-plugin-commodo-db-proxy",
     "../api-security",
     "../api-settings-manager",
     "../commodo",
@@ -20,6 +21,7 @@
   "references": [
     { "path": "../graphql/tsconfig.build.json" },
     { "path": "../api-i18n/tsconfig.build.json" },
+    { "path": "../api-plugin-commodo-db-proxy/tsconfig.build.json" },
     { "path": "../api-security/tsconfig.build.json" },
     { "path": "../api-settings-manager/tsconfig.build.json" },
     { "path": "../commodo-graphql/tsconfig.build.json" },
