--- a/packages/handler-db/tsconfig.json
+++ b/packages/handler-db/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "../../tsconfig",
-  "references": [{ "path": "../db" }]
+  "references": [{ "path": "../db" }, { "path": "../handler" }]
 }
