chore: fix `eslint` errors

--- a/package.json
+++ b/package.json
@@ -160,7 +160,7 @@
   "lint-staged": {
     "**/*.{js,ts,tsx}": [
       "prettier --check",
-      "eslint --max-warnings=0",
+      "eslint --max-warnings=0 --no-ignore",
       "adio"
     ]
   },
