--- a/packages/api-page-builder/package.json
+++ b/packages/api-page-builder/package.json
@@ -22,6 +22,7 @@
     "@webiny/graphql": "^4.13.0",
     "@webiny/handler-ssr": "^4.13.0",
     "@webiny/handler": "^4.13.0",
+    "@webiny/handler-db": "^4.13.0",
     "@webiny/handler-http": "^4.13.0",
     "@webiny/validation": "^4.13.0",
     "download": "^5.0.3",
@@ -48,6 +49,7 @@
     "@babel/plugin-proposal-export-default-from": "^7.5.2",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.8.3",
+    "@shelf/jest-dynamodb": "^1.7.0",
     "flow-copy-source": "^2.0.2",
     "@webiny/api-settings-manager": "^4.13.0"
   },
