chore: fix package dependencies

--- a/packages/api-page-builder/package.json
+++ b/packages/api-page-builder/package.json
@@ -19,11 +19,13 @@
     "@webiny/api-security": "^4.13.0",
     "@webiny/commodo": "^4.13.0",
     "@webiny/commodo-graphql": "^4.13.0",
+    "@webiny/db-dynamodb": "^4.13.0",
     "@webiny/graphql": "^4.13.0",
-    "@webiny/handler-ssr": "^4.13.0",
     "@webiny/handler": "^4.13.0",
+    "@webiny/handler-apollo-server": "^4.13.0",
+    "@webiny/handler-aws": "^4.13.0",
     "@webiny/handler-db": "^4.13.0",
-    "@webiny/handler-http": "^4.13.0",
+    "@webiny/handler-ssr": "^4.13.0",
     "@webiny/validation": "^4.13.0",
     "download": "^5.0.3",
     "extract-zip": "^1.6.7",
