--- a/packages/api-file-manager/package.json
+++ b/packages/api-file-manager/package.json
@@ -16,7 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "@shelf/jest-mongodb": "^1.1.3",
+    "@commodo/fields": "beta",
     "@webiny/api-security": "^4.13.0",
     "@webiny/commodo": "^4.13.0",
     "@webiny/commodo-graphql": "^4.13.0",
@@ -26,6 +26,7 @@
     "@webiny/validation": "^4.13.0",
     "@webiny/handler-client": "^4.13.0",
     "@webiny/project-utils": "^4.13.0",
+    "commodo-fields-object": "^1.0.6",
     "graphql-tag": "^2.10.1",
     "mime": "^2.4.4",
     "sanitize-filename": "^1.6.3",
@@ -39,7 +40,8 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "@babel/preset-typescript": "^7.0.0"
+    "@babel/preset-typescript": "^7.0.0",
+    "@shelf/jest-dynamodb": "^1.7.0"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.3"
