--- a/api/code/pageBuilder/installation/tsconfig.json
+++ b/api/code/pageBuilder/installation/tsconfig.json
@@ -1,15 +1,15 @@
 {
-  "extends": "../../../tsconfig",
+  "extends": "../../../../tsconfig",
   "references": [
-    { "path": "../../../packages/api-plugin-commodo-db-proxy" },
-    { "path": "../../../packages/api-security" },
-    { "path": "../../../packages/api-security-permissions-manager" },
-    { "path": "../../../packages/api-settings-manager" },
-    { "path": "../../../packages/api-page-builder" },
-    { "path": "../../../packages/api-mailchimp" },
-    { "path": "../../../packages/api-cookie-policy" },
-    { "path": "../../../packages/api-google-tag-manager" },
-    { "path": "../../../packages/handler" },
-    { "path": "../../../packages/handler-apollo-server" }
+    { "path": "../../../../packages/api-plugin-commodo-db-proxy" },
+    { "path": "../../../../packages/api-security" },
+    { "path": "../../../../packages/api-security-permissions-manager" },
+    { "path": "../../../../packages/api-settings-manager" },
+    { "path": "../../../../packages/api-page-builder" },
+    { "path": "../../../../packages/api-mailchimp" },
+    { "path": "../../../../packages/api-cookie-policy" },
+    { "path": "../../../../packages/api-google-tag-manager" },
+    { "path": "../../../../packages/handler" },
+    { "path": "../../../../packages/handler-apollo-server" }
   ]
 }
