feat: add `dbPlugins` & `elasticSearch` plugins

--- a/api/code/fileManager/graphql/package.json
+++ b/api/code/fileManager/graphql/package.json
@@ -5,9 +5,10 @@
 		"build": "webiny run build"
 	},
 	"dependencies": {
+		"@webiny/db-dynamodb": "^4.13.0",
 		"@webiny/handler-aws": "^4.13.0",
+		"@webiny/handler-db": "^4.13.0",
 		"@webiny/handler-apollo-server": "^4.13.0",
-		"@webiny/api-plugin-commodo-db-proxy": "^4.13.0",
 		"@webiny/api-plugin-security-cognito": "^4.13.0",
 		"@webiny/api-security": "^4.13.0",
 		"@webiny/api-security-permissions-manager": "^4.13.0",
