--- a/packages/app-template-admin/tsconfig.build.json
+++ b/packages/app-template-admin/tsconfig.build.json
@@ -11,6 +11,7 @@
     "../app-security",
     "../app-plugin-admin-welcome-screen",
     "../app-plugin-security-cognito",
+    "../app-security-content",
     "../app-template",
     "../react-router",
     "../ui"
@@ -28,6 +29,7 @@
     { "path": "../app-security/tsconfig.build.json" },
     { "path": "../app-plugin-admin-welcome-screen/tsconfig.build.json" },
     { "path": "../app-plugin-security-cognito/tsconfig.build.json" },
+    { "path": "../app-security-content/tsconfig.build.json" },
     { "path": "../app-template/tsconfig.build.json" },
     { "path": "../react-router/tsconfig.build.json" },
     { "path": "../ui/tsconfig.build.json" }
