--- a/packages/api-i18n-content/package.json
+++ b/packages/api-i18n-content/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@webiny/api-security-content",
+  "name": "@webiny/api-security",
   "version": "4.13.0",
   "main": "index.js",
   "repository": {
@@ -11,7 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "@webiny/api-security-content": "^4.13.0",
+    "@webiny/api-security": "^4.13.0",
     "@webiny/graphql": "^4.13.0"
   },
   "optionalDependencies": {
