--- a/packages/app-i18n-content/tsconfig.build.json
+++ b/packages/app-i18n-content/tsconfig.build.json
@@ -1,11 +1,18 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["src"],
-  "exclude": ["node_modules", "**/__tests__/**", "./dist", "../app"],
+  "exclude": ["node_modules", "**/__tests__/**", "./dist", "../app", "../app-i18n"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
     "declarationDir": "./dist"
   },
-  "references": [{ "path": "../app/tsconfig.build.json" }]
+  "references": [
+    {
+      "path": "../app/tsconfig.build.json"
+    },
+    {
+      "path": "../app-i18n/tsconfig.build.json"
+    }
+  ]
 }
