--- a/packages/app-i18n-content/tsconfig.json
+++ b/packages/app-i18n-content/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "../../tsconfig.json",
   "references": [
-    { "path": "../app" }
+    {
+      "path": "../app"
+    },
+    {
+      "path": "../app-i18n"
+    }
   ]
 }
